# zelle

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
src/: Dockerfile  config.py  exception.py  exception_handler.py  exception_handlers.py  exceptions.py  main.py  middleware.py  middlewares.py  pyproject.toml
src/auth/: guard.py  jwt.py  token.py
src/database/: client.py  manager.py
src/database/postgres/: alembic.ini  client.py  model.py
src/database/postgresql/: alembic.ini  manager.py  model.py
src/database/postgresql/alembic/: env.py
src/databases/: pg.py
src/databases/postgres/: client.py  models.py
src/databases/postgres/alembic/: env.py
src/databases/postgresql/: alembic.ini  client.py  models.py
src/exceptions/: general_exception.py  handlers.py  http_exception.py
src/middlewares/: handle_error.py  logging_middleware.py  trace.py  track_history.py
src/models/: transaction_model.py  user_model.py
src/repositories/: account.py  transaction.py
src/repository/: account.py  transaction.py
src/router/: account.py  auth.py  database.py  transaction.py
src/routers/: account.py  admin.py  database.py  database_router.py  login.py  transaction.py  transaction_router.py  user.py  user_router.py
src/schema/: account.py  token.py  transaction.py
src/schemas/: transaction.py  user.py
src/service/: account.py  auth.py  transaction.py
src/services/: account.py  login_service.py  transaction.py  transaction_service.py  user_service.py
src/utils/: auth.py  settings.py
(+18 files in other folders)
